<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageButton
            android:layout_alignParentRight="true"
            android:layout_centerInParent="true"
            android:id="@+id/menuLibroIB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:src="@drawable/account"
            android:backgroundTint="@color/white"
            />
    </RelativeLayout>


    <TextView
        android:id="@+id/detsTitoloTV"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Titolo Libro"
        android:textAlignment="center"
        android:textStyle="bold"
        android:textSize="25sp"
        android:textColor="@color/black"
        android:layout_margin="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="320dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/detsCopertinaIV"
            android:layout_width="200dp"
            android:layout_height="match_parent"/>


        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="match_parent"
            android:layout_marginTop="20dp"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="ISBN:"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:id="@+id/detsISBNTV"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="3"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Autore:"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:id="@+id/detsAutoreTV"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Editore:"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:id="@+id/detsEditoreTV"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="2"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="AP:"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />
                <TextView
                    android:id="@+id/detsAPTV"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="5"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="7dp">

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="Cat:"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black" />
                <TextView
                    android:id="@+id/detsCatTV"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="4"
                    android:textAlignment="textStart"
                    android:textSize="18sp"
                    android:textColor="@color/black"/>

            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_margin="7dp">


                <TextView
                    android:id="@+id/detsRatingTV"
                    android:layout_width="30dp"
                    android:layout_height="wrap_content"
                    android:text="5"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:textColor="@color/black"
                    />
                <ImageView
                    android:id="@+id/detsDescrizioneTV"
                    android:layout_width="20dp"
                    android:layout_height="match_parent"
                    android:src="@drawable/star"/>
            </LinearLayout>
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="15dp">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="Posizione:"
            android:textSize="20sp"
            android:textStyle="bold"
            android:textColor="@color/black"
             />
        <TextView
            android:id="@+id/detsPosizioneTV"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="2"
            android:textSize="20sp"
            android:textColor="@color/black"/>
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center">
        <Button
            android:id="@+id/prestitoButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="PRESTITO"
            android:textSize="20dp"
            android:textColor="@color/white"
            android:backgroundTint="#146DDA"
            android:layout_marginRight="5dp"/>
        <ImageButton
            android:id="@+id/interesseButton"
            android:layout_width="40dp"
            android:layout_height="match_parent"
            android:backgroundTint="#146DDA"
            android:src="@drawable/rsz_heart"
            android:text="INTERESSE"
            android:textSize="20dp"
            />

    </LinearLayout>

</LinearLayout>